# Bonobo

./: '  .gitignore  :wq  Ast.hi  Ast.hs  CHANGELOG.md  CMakeLists.txt  Lexer.hi  Lexer.hs  Lexer2.hi  Main  Main.hi  Main.hs  Makefile  Parser.hi  Parser.hs  README.md  REPL.hi  REPL.hs  TODO  Token.hi  Token.hs  Utils.hi  Utils.hs  input  interpretor.cabal  notes  package.yaml  stack.yaml  suite  testLexer.hs  testParser.hs  testPrecedence.hs  tokens  works.ll
.github/workflows/: release.yaml
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux-tinfo6/aa58564c18976a12add44406ba88a5976a5e010aea6291ccc2ea1b3c38c418ff/9.0.2/lib/x86_64-linux-ghc-9.0.2/interpretor-0.1.0.0-CIEEk7fBgZ6FgXjLhe3j8t/: Ast.dyn_hi  Ast.hi  Lexer.dyn_hi  Lexer.hi  Parser.dyn_hi  Parser.hi  Token.hi  Utils.dyn_hi  Utils.hi
.stack-work/install/x86_64-linux-tinfo6/aa58564c18976a12add44406ba88a5976a5e010aea6291ccc2ea1b3c38c418ff/9.0.2/pkgdb/: interpretor-0.1.0.0-CIEEk7fBgZ6FgXjLhe3j8t.conf  package.cache
aoc2022/: day1  day2
benchmark/: equality  fib  instantiation  string_equality  struct
bugs/: fib  multiple_ifs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
llvmex/: fib.cpp  for.cpp  out.ll  str.cpp
src/: .Main.hs.swp  Ast.hi  Ast.hs  Code.hs  Compiler.hs  CompilerUtils.hs  Eval.hs  Lexer.hi  Lexer.hs  Main  Main.hi  Main.hs  Object.hs  Parser.hi  Parser.hs  ParserUtils.hs  PreBuiltFuncs.hs  REPL.hs  Token.hi  Token.hs  Utils.hi  Utils.hs  Utils2.hs  VM.hs  a.out  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  debug.cpp  debug.h  dis.bo  expr.cpp  expr.h  library.cpp  library.h  llvm.cpp  llvm.h  llvmcompiler.cpp  (+24 more)
test/: CMakeLists.txt  Spec.hs  TestArray.cpp  TestArray.hs  TestAst.cpp  TestBinary.cpp  TestBinaryOp.cpp  TestBool.hs  TestCode.hs  TestComparison.cpp  TestCompiler.cpp  TestDifficult.hs  TestEval.hs  TestFor.cpp  TestFor.hs  TestFun.cpp  TestFunCall.cpp  TestFunc.hs  TestIdent.hs  TestIf.cpp  TestIf.hs  TestIndex.cpp  TestLexer.hs  TestLogical.cpp  TestMain.hs  TestMap.cpp  TestMap.hs  TestMultiple.hs  TestNoSta.hs  TestObject.hs  TestParser.hs  TestParserV2.hs  TestPrebuilt.hs  TestPrecedence.hs  TestScanner.cpp  TestSolo.cpp  TestStack.cpp  TestStruct.cpp  TestTFT.hs  TestUtils.hs  (+15 more)
test/llvm/: TestLLVM.cpp  array.bo  ast.bo  binary.bo  comparison.bo  for.bo  fun.bo  if.bo  index.bo  logical.bo  map.bo  struct.bo  while.bo
