cabal-version: 1.12


name:           src 
version:        0.1.0.0
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Token, Utils, Lexer, Parser, Ast
  other-modules:
      Paths_src
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5, containers 
  default-language: Haskell2010

executable src-exe
  main-is: Main.hs
  other-modules:
      Paths_src
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , src
  default-language: Haskell2010

test-suite src-test
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  other-modules:
      Paths_src
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , src
    , HUnit
    , containers
  default-language: Haskell2010
