cabal-version: 1.12


name:           interpretor 
version:        0.1.0.0
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Token, Utils, Lexer, Parser, Ast, ParserUtils, Object, Code, Compiler, VM, Utils2
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wredundant-constraints
  build-depends:
      base >=4.7 && <5, containers, bytestring, binary, utf8-string, lens 
  default-language: Haskell2010

test-suite interpretor-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Lexer 
    , Utils 
    , ParserUtils
    , Token 
    , Parser 
    , Ast 
    , Object
    , Code
    , Compiler
    , VM 
    , Utils2
    , TestLexer
    , TestPrecedence
    , TestParser
    , TestBool
    , TestIf
    , TestIdent
    , TestFunc
    , TestTFT
    , TestDifficult
    , TestArray
    , TestMap
    , TestFor
    , TestCode
    , TestVM 
    , TestNoSta
  hs-source-dirs:
      test 
    , src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec 
    , containers
    , bytestring
    , binary
    , utf8-string
    , lens
  default-language: Haskell2010
